--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,10 @@
     --fw-reg: 300;
     --fw-bold: 900;
     
-    --clr-light: #acacac;
-    --clr-dark: #303030;
-    --clr-accent: #e01616;
+    --clr-1: #dc9a00;
+    --clr-2: #4e3700;
+    --clr-accent-1: #dc9a00;
+    --clr-accent-2: #291d00;
     
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
@@ -42,12 +43,13 @@ html {
 }
 
 body {
-    background: var(--clr-light);
-    color: var(--clr-dark);
+    background: var(--clr-2);
+    color: var(--clr-1);    
     margin: 0;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
+
 }
 
 section {
@@ -62,7 +64,7 @@ img {
 strong { font-weight: var(--fw-bold) }
 
 :focus {
-    outline: 3px solid var(--clr-accent);
+    outline: 3px solid var(--clr-accent-2);
     outline-offset: 3px;
 }
 
@@ -71,8 +73,8 @@ strong { font-weight: var(--fw-bold) }
 .btn {
     display: inline-block;
     padding: .5em 2.5em;
-    background: var(--clr-accent);
-    color: var(--clr-dark);
+    background: var(--clr-accent-2);
+    color: var(--clr-1);
     text-decoration: none;
     cursor: pointer;
     font-size: .8rem;
@@ -106,9 +108,11 @@ h3 { font-size: var(--fs-h3) }
 
 .section__title--intro {
     font-weight: var(--fw-reg);
+    color: var(--clr-1);
 }
 
 .section__title--intro strong {
+    color: var(--clr-1);
     display: block;
 }
 
@@ -119,16 +123,16 @@ h3 { font-size: var(--fs-h3) }
 
 .section__subtitle--intro,
 .section__subtitle--about {
-    background: var(--clr-accent);
+    background: var(--clr-accent-2);
+    color: var(--clr-accent-1);
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
 }
 
 .section__subtitle--work {
-    color: var(--clr-accent);
+    color: var(--clr-2);
     font-weight: var(--fw-bold);
-    margin-bottom: 2em;
 }
 
 /* header */
@@ -145,8 +149,8 @@ header {
 
 .nav {
     position: fixed;
-    background: var(--clr-dark);
-    color: var(--clr-light);
+    background: var(--clr-1);
+    color: var(--clr-2);
     top: 0;
     bottom: 0;
     left: 0;
@@ -176,7 +180,7 @@ header {
 }
 
 .nav__link:hover {
-    color: var(--clr-accent);
+    color: var(--clr-accent-2);
 }
 
 .nav-toggle {
@@ -223,7 +227,7 @@ header {
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-    background: var(--clr-accent);
+    background: var(--clr-accent-2);
     width: 2em;
     height: 3px;
     border-radius: 1em;
@@ -253,7 +257,8 @@ header {
     box-shadow: var(--bs);
 }
 
-.section__subtitle--intro {
+.section__subtitle--intro,
+.section__subtitle--about {
     display: inline-block;
 }
 
@@ -292,17 +297,15 @@ header {
 /*  What I Do section  */
 
 .my-services {
-    background-color: var(--clr-dark);
-    background-image: url(../img/services-bg.jpg);
-    background-size: cover;
-    /* background-blend-mode: multiply; */
-    color: var(--clr-light);
+    background-color: var(--clr-1);
+    color: var(--clr-2);
     text-align: center;
 }
 
 .section__title--services {
-    color: var(--clr-accent);
+    color: var(--clr-accent-4e3700);
     position: relative;
+    text-align: center;
 }
 
 .section__title--services::after {
@@ -311,16 +314,17 @@ header {
     width: 5em;
     height: 3px;
     margin: 0.5em auto 1em;
-    background: var(--clr-light);
+    background: var(--clr-2);
 }
 
 .services {
-    margin-bottom: 4em;
+    margin-bottom: 1em;
+    display: inline-block;
 }
-
 
 .service {
     max-width: 300px;
+    text-align: center;
 }
 
 @media (min-width: 800px) {
@@ -362,9 +366,11 @@ header {
     
     .section__title--about {
         grid-area: title;
+        color: var(--clr-1);
     }
     
     .section__subtitle--about {
+        align-self: start;
         grid-column: 1 / -1;
         grid-row: 2;
         position: relative;
@@ -384,27 +390,23 @@ header {
 /* My Work */
 
 .my-work {
-    background-color: var(--clr-dark);
-    color: var(--clr-light);
+    background-color: var(--clr-1);
+    color: var(--clr-2);
     text-align: center;    
 }
 
 .portfolio {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-}
-
-.portfolio__item {
-    /* background: var(--clr-accent); 
-    overflow: hidden; */
-}
-
-.portfolio__img {
-    padding-bottom: 2em;
-    max-width: 250px;
+    place-items:center;
+    grid-template-columns: 1fr 1fr;
+    
+    gap: 10px;
+    padding: 10px;
+  }
+.portfolio__img{
     transition: 
-        transform 750ms cubic-bezier(.5, 0, .5, 1),
-        opacity 250ms linear;
+        transform 250ms cubic-bezier(.5, 0, .5, 1),
+        sopacity 250ms linear;
 }
 
 .portfolio__item:focus {
@@ -422,10 +424,10 @@ header {
 /* footer */
 
 .footer {
-    background: #111;
-    color: var(--clr-accent);
+    background: var(--clr-accent-2);
+    color: var(--clr-1);
     text-align: center;
-    padding: 2.5em 0;
+    padding: 1.5em 0;
     font-size: var(--fs-h3);
 
 }
@@ -443,16 +445,16 @@ header {
 .social-list__link:hover {
     opacity: .7;
 }
-
+/*
 .footer__link:hover {
     text-decoration: underline;
 }
-
+*/
 .social-list {
     list-style: none;
     display: flex;
     justify-content: center;
-    margin: 2em 0 0;
+    margin: 1em 0 0;
     padding: 0;
 }
 
@@ -467,9 +469,9 @@ header {
 /* Individual portfolio item styles */
 
 .portfolio-item-individual {
-    background: var(--clr-dark);
+    background: var(--clr-1);
     background-size: cover;
-    color: var(--clr-light);
+    color: var(--clr-2);
     padding: 0 2em 2em;
     margin: 0 auto;
 }
@@ -485,25 +487,25 @@ header {
     
     padding-top: 2em;
     padding-bottom: 2em;
-    max-width: 600px;
+    max-width: 1500px;
     font-size: var(--fs-h3);
 }
 .portfolio-item-individual img {
-    max-width:100%;
-    max-height:100%;
+    max-width:75%;
+    max-height:75%;
 
 }
 
 .portfolio-item-buttons{
     text-align: center;
-    background: var(--clr-dark);
+    background: var(--clr-1);
     margin-bottom: 1em;
 }
 .portfolio-item-button{
     display: inline-block;
     padding: .5em 2.5em;
-    background: var(--clr-accent);
-    color: var(--clr-light);
+    background: var(--clr-accent-2);
+    color: var(--clr-1);
     text-decoration: none;
     cursor: pointer;
     font-size: .8rem;
