--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,7 @@ h3 { font-size: var(--fs-h3) }
 
 .section__title--intro {
     font-weight: var(--fw-bold);
+    color: var(--clr-1);
 }
 
 .section__title--intro strong {
